--- a/Gui/src/app/palette-dialog/palette-dialog.component.scss
+++ b/Gui/src/app/palette-dialog/palette-dialog.component.scss
@@ -1,7 +1,3 @@
-:host {
-    overflow: hidden;
-}
-
 input {
     background-color: transparent;
     border: none;
