--- a/Gui/src/styles.scss
+++ b/Gui/src/styles.scss
@@ -4,3 +4,7 @@ body {
 }
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+mat-dialog-container {
+  overflow: hidden !important;
+}
